rocketchat_aks/rocketchat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
  namespace: rocketchat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rocketchat
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
        - args:
            - bash
            - -c
            - |-
              for i in `seq 1 30`; do
                  node main.js &&
                  s=$? && break || s=$?;
                  echo "Tried $i times. Waiting 5 secs...";
                  sleep 5;
                done; (exit $s)
          resources:
              requests:
                memory: "1Gi"
                cpu: "1000m"
              limits:
                memory: "4Gi"
                cpu: "4000m" 
          image: registry.rocket.chat/rocketchat/rocket.chat:latest
          name: rocketchat
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/uploads
              name: rocketchat-data
      restartPolicy: Always
      volumes:
        - name: rocketchat-data
          persistentVolumeClaim:
            claimName: rocketchat-data
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 0
